--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,31 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Farm2Door – North Simcoe's online farmers' market. Fresh, local & healthy food available year round."
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Outfit:wght@500;700&display=swap" rel="stylesheet">
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Farm2Door",
+      "url": "http://localhost:3000/",
+      "description": "North Simcoe's online farmers' market and local food store. Fresh, local & healthy food available year round.",
+      "areaServed": ["Tiny", "Tay", "Midland", "Penetanguishene"],
+      "sameAs": []
+    }
+    </script>
+    <meta property="og:title" content="Farm2Door – North Simcoe's online farmers' market" />
+    <meta property="og:description" content="Fresh, local & healthy food available year round. Delivering to Tiny, Tay, Midland & Penetanguishene." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://localhost:3000/" />
+    <meta property="og:image" content="https://images.unsplash.com/photo-1506806732259-39c2d0268443?q=80&w=1200&auto=format&fit=crop" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Farm2Door – North Simcoe's online farmers' market" />
+    <meta name="twitter:description" content="Fresh, local & healthy food available year round. Delivering to Tiny, Tay, Midland & Penetanguishene." />
+    <meta name="twitter:image" content="https://images.unsplash.com/photo-1506806732259-39c2d0268443?q=80&w=1200&auto=format&fit=crop" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +47,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Farm2Door – North Simcoe's online farmers' market</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
