--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Farm2Door – North Simcoe's online farmers' market. Fresh, local & healthy food available year round."
+      content="Farm2Door Pakistan – Pakistan's online farmers' market. Fresh, local & halal-conscious food available year round."
     />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,21 +16,21 @@
     {
       "@context": "https://schema.org",
       "@type": "Organization",
-      "name": "Farm2Door",
+      "name": "Farm2Door Pakistan",
       "url": "http://localhost:3000/",
-      "description": "North Simcoe's online farmers' market and local food store. Fresh, local & healthy food available year round.",
-      "areaServed": ["Tiny", "Tay", "Midland", "Penetanguishene"],
+      "description": "Pakistan's online farmers' market and local food store. Fresh, local & halal-conscious food available year round.",
+      "areaServed": ["Karachi", "Lahore", "Islamabad", "Rawalpindi"],
       "sameAs": []
     }
     </script>
-    <meta property="og:title" content="Farm2Door – North Simcoe's online farmers' market" />
-    <meta property="og:description" content="Fresh, local & healthy food available year round. Delivering to Tiny, Tay, Midland & Penetanguishene." />
+    <meta property="og:title" content="Farm2Door Pakistan – Pakistan's online farmers' market" />
+    <meta property="og:description" content="Fresh, local & halal-conscious food available year round. Delivering to Karachi, Lahore, Islamabad & Rawalpindi." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://localhost:3000/" />
     <meta property="og:image" content="https://images.unsplash.com/photo-1506806732259-39c2d0268443?q=80&w=1200&auto=format&fit=crop" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Farm2Door – North Simcoe's online farmers' market" />
-    <meta name="twitter:description" content="Fresh, local & healthy food available year round. Delivering to Tiny, Tay, Midland & Penetanguishene." />
+    <meta name="twitter:title" content="Farm2Door Pakistan – Pakistan's online farmers' market" />
+    <meta name="twitter:description" content="Fresh, local & halal-conscious food available year round. Delivering to Karachi, Lahore, Islamabad & Rawalpindi." />
     <meta name="twitter:image" content="https://images.unsplash.com/photo-1506806732259-39c2d0268443?q=80&w=1200&auto=format&fit=crop" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -47,7 +47,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Farm2Door – North Simcoe's online farmers' market</title>
+    <title>Farm2Door Pakistan – Pakistan's online farmers' market</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
